add npx scripts, add type module

--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "nicolette-cheng-capstone-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "node --watch index.js",
+    "migrate": "npx knex migrate:latest",
+    "rollback": "npx knex migrate:rollback",
+    "drop": "npx knex migrate:down",
+    "seed": "npx knex seed:run"
   },
   "keywords": [],
   "author": "",
